# Financeiro_1v

./: .env  .env.example  .env.production  .gitignore  BUGS_REPORT.md  DEPLOY_NETLIFY.md  README.md  index.html  netlify.toml  package-lock.json  package.json  vite.config.js
.cursor/plans/: auth_sync_sem_google.plan.md  saas_o_que_falta.plan.md
.github/workflows/: build.yml
scripts/: zip-server.js
server/: .env.example  README.md  auth-users.json  db.js  package-lock.json  package.json  server.js  start-server.bat  start-server.command  sync-store-user-1770390734692.json  sync-store-user-1770502657846.json
server/lib/: email.js
server/middlewares/: auth.js
server/repos/: syncRepo.js  usuariosRepo.js
server/routes/: auth.js  errors.js  sync.js
src/: main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  main.rs
src/app/: App.css  App.jsx  Login.jsx  Privacidade.jsx  Termos.jsx  rotas.jsx
src/componentes/compartilhados/: BarraFiltros.jsx  EstadoVazio.jsx  IndicadorSync.jsx  Onboarding.jsx  SeletorMes.jsx  index.js
src/componentes/layout/: BarraLateral.jsx  Cabecalho.jsx  index.js  (+2 more)
src/config/: api.js
src/estilos/: index.css  variaveis.css
src/hooks/: index.js  useEstatisticas.js  useFiltros.js  useMetricasEmpresa.js  useSeletorMes.js  useServerStatus.js  useTransacoes.js
src/lib/: auth.js  clientes.js  constantes.js  contas.js  db.js  formatadores.js  index.js  moeda.js  sync.js  utils.js
src/services/: api.js
src/store/: ContextoApp.jsx  ProviderAuth.jsx  ProviderDados.jsx  index.js
(+27 files in other folders)
